--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,19 +14,21 @@
     "@farcaster/frame-sdk": "^0.0.61",
     "@farcaster/miniapp-wagmi-connector": "latest",
     "@farcaster/quick-auth": "latest",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.64.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eruda": "^3.2.3",
+    "formik": "^2.4.9",
     "jose": "^5.9.6",
     "lucide-react": "^0.292.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.0.0",
+    "tailwind-merge": "^2.6.0",
     "viem": "^2.27.2",
     "wagmi": "^2.14.12",
     "zod": "^3.24.1"
