--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.6.0",
+    "vaul": "^1.1.2",
     "viem": "^2.27.2",
     "wagmi": "^2.14.12",
     "zod": "^3.24.1"
