--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "tailwind-merge": "^2.6.0",
     "vaul": "^1.1.2",
     "viem": "^2.27.2",
