--- a/apps/indexer/package.json
+++ b/apps/indexer/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "indexer",
+  "name": "@vamos/indexer",
   "version": "0.0.1",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "ponder dev",
-    "dev:anvil": "ponder dev --config ponder.config.anvil.ts",
-    "start": "ponder start",
-    "start:anvil": "ponder start --config ponder.config.anvil.ts",
+    "dev": "dotenv -e ../../.env -- ponder dev",
+    "dev:anvil": "dotenv -e ../../.env -- ponder dev --config ponder.config.anvil.ts",
+    "start": "dotenv -e ../../.env -- ponder start --schema public",
+    "start:anvil": "dotenv -e ../../.env -- ponder start --config ponder.config.anvil.ts",
     "db": "ponder db",
     "codegen": "ponder codegen",
     "lint": "eslint .",
-    "typecheck": "tsc"
+    "type-check": "tsc"
   },
   "dependencies": {
     "ponder": "^0.15.10",
