--- a/apps/indexer/.eslintrc.json
+++ b/apps/indexer/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "ponder"
+  "extends": [
+    "../../.eslintrc.json",
+    "ponder"
+  ],
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  }
 }
