--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -1,9 +1,9 @@
 {
-  "extends": ["next/core-web-vitals"],
-  "plugins": ["@typescript-eslint"],
-  "rules": {
-    "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/no-unused-vars": "warn"
+  "extends": [
+    "../../.eslintrc.json",
+    "next/core-web-vitals"
+  ],
+  "parserOptions": {
+    "project": "./tsconfig.json"
   }
 }
