--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^1.1.2",
     "@farcaster/frame-core": "latest",
     "@farcaster/frame-sdk": "^0.0.61",
     "@farcaster/miniapp-wagmi-connector": "latest",
@@ -18,7 +19,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.12.0",
-    "@tanstack/react-query": "^5.64.2",
+    "@tanstack/react-query": "^5.90.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eruda": "^3.2.3",
@@ -32,7 +33,7 @@
     "react-query": "^3.39.3",
     "tailwind-merge": "^2.6.0",
     "vaul": "^1.1.2",
-    "viem": "^2.27.2",
+    "viem": "^2.39.3",
     "wagmi": "^2.14.12",
     "zod": "^3.24.1"
   },
